@@ -21,7 +21,8 @@ Priority Issues (Fix These First)
   - ls("-l") | wc -l does not work (legacy compiler issue) but the
     opposite works.
   - test sparforte as a login shell
-- why are in out parameters not references?
+- why are in out parameters not references? e.g. in mysqlm and dbm, should
+  arrays of database connections be possible?
 - interpreterPhase - is it set correctly in all places?
 - can I address dash shell compatibility?
 - missing a case "when" keyword can cause string exception
@@ -225,9 +226,8 @@ Annoyances / Bugs with Workarounds / Updates
     - business shell, though, only imports variables right now
 
 - shell
-    - substring substitutions not imlemented yet: ${#}, ${%}
+    - substring substitutions not implemented yet: ${#}, ${%}
     - windows size change is not refreshing the terminal settings?
-    - s := `set_error( current_output ); date -d "foo" '+%s'; set_error( standard_error );` does not work as expected (error output shoud be captured)
 - unsorted/misc
     - err_tokenize doesn't indent properly (e.g. s := `xxx - missing backquote)
     - spitbol support
@@ -240,8 +240,6 @@ Annoyances / Bugs with Workarounds / Updates
     - function f(p), p should not be 'already exists' if there is a p in scope
     - change pegasock to use bdb format exceptions with filename in message?
     - check pragma block with @
-    - ParseGeneralStatement allows declarations.  For body and user role blocks,
-      we need more restrictive variations of PGS.
     - @ for a(x) gives an unexpected exception
     - Apache doesn't allow command paramenters for running CGI scripts.  There
       should be an easy way to set the SDLC mode configuration without command
