@@ -35,7 +35,7 @@ syntax check the script but do not run
 development phase mode
 .TP
 \fB\-\-color\fR, \fB\-\-colour\fR
-enable colour messages
+enable colour messages and UTF-8 icons
 .TP
 \fB\-d\fR, \fB\-\-debug\fR
 enable pragma assert and pragma debug
